<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pallets</string>
    <string name="action_settings">Settings</string>
    <string name="PoidNetAnnoncé">Poids Net Annoncé</string>
    <string name="BrutManquant">Brut Manquant</string>
    <string name="NetManquant">Net Manquant</string>
    <string name="BrutNetManquant">Brut/Net Manquant</string>
    <string name="PoidNetréel">Poids Net réel</string>
    <string name="NombredeFruits">Nombre de Pièces</string>
    <string name="Nombredecolis">Nombre de colis</string>
    <string name="Taretotale">Tare totale</string>
    <string name="Pourcentageabimés">Pourcentage abimés</string>
    <string name="PoidMoyenPièce">Poids Moyen/Pièce</string>
    <string name="PoidNetMoyenColis">Poids Net Moyen/Colis</string>
    <string name="Nombredepalettes">Nombre de palettes</string>
    <string name="PoidBrutattendu">Poids Brut attendu</string>
    <string name="Delta">Delta Poids Net</string>
    <string name="PoidBrut">Poids Brut</string>
    <string name="NombreDePalettes">Nombre Pal. au Sol</string>
    <string name="PoidPalette">Poids Pal. + intermediaire</string>
    <string name="NombredeColis">Nombre de Colis</string>
    <string name="Coliscolonne">Colis/colonne</string>
    <string name="Colistranche">Colis/tranche</string>
    <string name="TareColis">Tare Colis</string>
    <string name="Piecescolis">Pieces/colis</string>
    <string name="Tachées">Abimées</string>
    <string name="PoidEchantillon">Poids échantillon</string>
    <string name="NbrePoidEchantillon">Pièces/échantillon</string>
    <string name="Clear">Clear</string>
    <string name="PeséeBL">Pesée/B.L.</string>
    <string name="FullFast">Full/Fast</string>
    <string name="echantillon">Colis par échantillon</string>
    <string name="options">Options</string>
    <string name="valeursDefauts">Utiliser les valeurs par defaut</string>
    <string name="selectionnerTout">Selectionner tout par defaut</string>
    <string name="masquerMultiplicateur">Masquer Multiplicateur</string>
    <string name="sur">sur</string>
    <string name="colis">colis</string>
    <string name="masquerAdditionneur">Masquer Additionneur</string>
    <string name="addition">Addition</string>
    <string name="valeurspardefault">Valeurs par défaut : </string>
    <string name="nbrColisPrevu">Nombre de colis prévus</string>
    <string name="PoidNetReconstruit">Poids Net Reconstruit</string>
    <string name="PoidMoyenParColisSource">Base Poids moyen/colis</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
