<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Switch
        android:id="@+id/selectionnerToutParDefaut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/selectionnerTout" />

    <Switch
        android:id="@+id/utiliserValeurParDefaut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="10dp"
        android:paddingTop="20dp"
        android:text="@string/valeursDefauts" />

    <Switch
        android:id="@+id/masquermultiplicateur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/masquerMultiplicateur" />

    <Switch
        android:id="@+id/masquerAdditionneur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/masquerAdditionneur" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="false"
        android:ems="10"
        android:inputType="none"
        android:paddingTop="33dp"
        android:text="@string/valeurspardefault"
        android:textStyle="italic" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/defautNombrePalettes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NombreDePalettes"
            android:inputType="number|numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/defautTarePalette"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/PoidPalette"
            android:inputType="number|numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/defautTareColis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/TareColis"
            android:inputType="number|numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/defautNombrePoidEchantillon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NbrePoidEchantillon"
            android:inputType="number|numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
