<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EcranPremier"
    tools:layout_editor_absoluteY="0dp"
    tools:showIn="@layout/activity_ecran_premier">

    <LinearLayout
        android:id="@+id/linearLayoutA"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/poidNetInputLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:visibility="gone">

                <android.support.design.widget.TextInputEditText
                    android:selectAllOnFocus="true"
                    android:id="@+id/poidNetAnnonce"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/PoidNetAnnoncé"
                    android:inputType="number|numberDecimal"
                    android:nextFocusDown="@id/poidBrut" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:selectAllOnFocus="true"
                    android:id="@+id/poidBrut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/PoidBrut"
                    android:inputType="number|numberDecimal"
                    android:nextFocusDown="@id/nombreDePalettes" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:selectAllOnFocus="true"
                    android:id="@+id/nombreDePalettes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/NombreDePalettes"
                    android:inputType="number|numberDecimal"
                    android:nextFocusDown="@id/poidPalet" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:selectAllOnFocus="true"
                    android:id="@+id/poidPalet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/PoidPalette"
                    android:inputType="number|numberDecimal"
                    android:nextFocusDown="@id/nombreDeColis" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:selectAllOnFocus="true"
                    android:id="@+id/nombreDeColis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/NombredeColis"
                    android:inputType="number|numberDecimal"
                    android:nextFocusDown="@id/colisParColonne" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/colonneTrancheLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:selectAllOnFocus="true"
                    android:id="@+id/colisParColonne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Coliscolonne"
                    android:inputType="number|numberDecimal"
                    android:nextFocusDown="@id/colisParTranche" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:selectAllOnFocus="true"
                    android:id="@+id/colisParTranche"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Colistranche"
                    android:inputType="number|numberDecimal"
                    android:nextFocusDown="@id/tareColis" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:selectAllOnFocus="true"
                    android:id="@+id/tareColis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/TareColis"
                    android:inputType="number|numberDecimal"
                    android:nextFocusDown="@id/piecesParColis" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:selectAllOnFocus="true"
                    android:id="@+id/piecesParColis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Piecescolis"
                    android:inputType="number|numberDecimal"
                    android:nextFocusDown="@id/piecesAbimees" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nombrePoidEchantillonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/poidEchantillon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/PoidEchantillon"
                    android:inputType="number|numberDecimal"
                    android:nextFocusDown="@id/nombreColisEchantillon"
                    android:selectAllOnFocus="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nombrePoidEchantillon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/NbrePoidEchantillon"
                    android:inputType="number|numberDecimal"
                    android:nextFocusDown="@id/fab"
                   android:selectAllOnFocus="true" />
           </android.support.design.widget.TextInputLayout>
       </LinearLayout>



       <LinearLayout
           android:id="@+id/tachesEchantillonLayout"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <android.support.design.widget.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_weight="1">

               <android.support.design.widget.TextInputEditText
                   android:selectAllOnFocus="true"
                   android:id="@+id/piecesAbimees"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/Tachées"
                   android:inputType="number|numberDecimal"
                   android:nextFocusDown="@id/nombreColisEchantillon" />
           </android.support.design.widget.TextInputLayout>

           <android.support.design.widget.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1">

               <android.support.design.widget.TextInputEditText
                   android:id="@+id/nombreColisEchantillon"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/echantillon"
                   android:inputType="number|numberDecimal"
                   android:nextFocusDown="@id/fab"
                   android:selectAllOnFocus="true" />
           </android.support.design.widget.TextInputLayout>
       </LinearLayout>





</LinearLayout>


   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_weight="1"
       android:orientation="horizontal"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/linearLayoutA"
       app:layout_constraintVertical_bias="0">

       <EditText
           android:id="@+id/resultat"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:background="@android:color/transparent"
           android:clickable="false"
           android:ems="10"
           android:enabled="false"
           android:focusable="false"
           android:inputType="none"
           android:singleLine="false"
           android:textColor="@color/colorPrimaryDark" />
   </LinearLayout>

</android.support.constraint.ConstraintLayout>